# typeinfo-c

./: .gitignore  CMakeLists.txt  README.md  deps.toml
.github/workflows/: build_linux.yml  build_macos.yml
src/: .gitignore  CMakeLists.txt
src/examples/: CMakeLists.txt  main.c  output.swamp-typeinfo
src/include/swamp-typeinfo/: add.h  chunk.h  consume.h  deep_equal.h  deserialize.h  deserialize_internal.h  equal.h  fnv.h  serialize.h  typeinfo.h  version.h
src/lib/: CMakeLists.txt  add.c  align.c  chunk.c  consume.c  debug.c  deep_equal.c  deserialize.c  deserialize_fixup.c  equal.c  fnv.c  memory_size.c  serialize.c  typeinfo.c
